force-app/main/default/objects/Carbon_Emission__c/Carbon_Emission__c.object-meta.xml
<CustomObject>
    <label>Carbon Emission</label>
    <pluralLabel>Carbon Emissions</pluralLabel>
    <nameField>
        <label>Emission Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>

    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount (CO₂e)</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
        <required>true</required>
    </fields>

    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
        <required>true</required>
    </fields>

    <fields>
        <fullName>Source__c</fullName>
        <label>Emission Source</label>
        <type>MasterDetail</type>
        <referenceTo>Emission_Source__c</referenceTo>
        <relationshipName>Carbon_Emissions</relationshipName>
    </fields>
</CustomObject>