force-app/main/default/objects/Carbon_Emission__c/fields/Carbon_Emission__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Emission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carbon Emission</label>
    <referenceTo>Carbon_Emission__c</referenceTo>
    <relationshipLabel>Carbon Emissions</relationshipLabel>
    <relationshipName>Carbon_Emissions</relationshipName>
    <type>Lookup</type>
</CustomField>