force-app/main/default/objects/Carbon_Emission__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>