force-app/main/default/objects/Carbon_Emission__c/fields/High_Emission_Flag__c.field-meta.xml
<CustomField>
    <fullName>High_Emission_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Emission Flag</label>
    <type>Checkbox</type>
</CustomField>