force-app/main/default/objects/Carbon_Emission__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Classification of emissions by Scope 1 (direct), Scope 2 (indirect energy), Scope 3 (other indirect)</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scope 1 (Direct)</fullName>
            </value>
            <value>
                <fullName>Scope 2 (Indirect Energy)</fullName>
            </value>
            <value>
                <fullName>Scope 3 (Other Indirect)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>