force-app/main/default/objects/Carbon_Emission__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emission Source</label>
    <referenceTo>Emission_Source__c</referenceTo>
    <relationshipLabel>Carbon Emissions</relationshipLabel>
    <relationshipName>Carbon_Emissions</relationshipName>
    <type>Lookup</type>
</CustomField>