force-app/main/default/objects/Carbon_Emission__c/fields/Source_c__c.field-meta.xml
<CustomField>
    <fullName>Source_c__c</fullName>
    <label>Source</label>
    <referenceTo>Emission_Source__c</referenceTo>
    <relationshipLabel>Carbon Emissions (Source)</relationshipLabel>
    <relationshipName>Carbon_Emissions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>