force-app/main/default/objects/Carbon_Emission__c/recordTypes/Carbon_Emission_RT.recordType-meta.xml
<RecordType>
    <fullName>Carbon_Emission_RT</fullName>
    <active>true</active>
    <description>Record type for carbon emissions</description>
    <label>Carbon_Emission_RT</label>
</RecordType>