force-app/main/default/objects/Carbon_Emission__c/validationRules/Emission_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Emission_Date_Not_Future</fullName>
    <active>true</active>
    <description>Ensure emission date is today or earlier, not a future date.</description>
    <errorConditionFormula>Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Emission date cannot be in the future.</errorMessage>
</ValidationRule>