force-app/main/default/objects/Carbon_Emission__c/validationRules/Positive_Emission_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Emission_Amount</fullName>
    <active>true</active>
    <description>Ensure that Carbon Emission Amount is always greater than 0.</description>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Emission Amount must be greater than 0.</errorMessage>
</ValidationRule>